# serializer version: 1
# name: test_study_reader_minimal_study
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_minimal
      	Title:	Minimal Investigation
      	Path:	i_minimal.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_minimal.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_study_reader_minimal_study_iostring
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_minimal
      	Title:	Minimal Investigation
      	Path:	<no file>
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_minimal.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_study_reader_minimal_study_iostring2
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_minimal
      	Title:	Minimal Investigation
      	Path:	<no file>
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_minimal.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_study_reader_small_study
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_small
      	Title:	Small Investigation
      	Path:	i_small.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_small.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_study_reader_small_study.1
  list([
    "Found annotated material/file without name: Material(type='Sample Name', unique_name='S1-Empty Sample Name-13-5', name='', extract_label=None, characteristics=(Characteristics(name='status', value=['1'], unit=None),), comments=(), factor_values=(FactorValue(name='treatment', value=[''], unit=None),), material_type=None, headers=['Sample Name', 'Characteristics[status]', 'Factor Value[treatment]'])",
  ])
# ---
